# pingou

./: .gitignore  Dockerfile  README.md  environment.yml  logs.py  pg.py  pyproject.toml  pytest.ini  requirements.txt  run.py
.circleci/: config.yml
docker/: .env  docker-compose.yml  init-pg.sh
docker/dev/: .env  docker-compose.yml  init-pg.sh
docker/prd/: .env  docker-compose.yml  nginx.conf
pingou/: __init__.py  config.py  env.py  error_listener.py  logs.py  pg.py
pingou/listener/: __init__.py  listener.py  tail.py
pingou/parser/: __init__.py  nginx.py  regexps.py
sql/: 0_db.sql  1_nginx.sql
static/: regexps.json  regexps.yml
test-config/: config.yml
tests/: config.py  conftest.py  listener.py  nginx_parser.py  test_run.py  utils.py
tests/files/: config-prd.yml  config.yml  tests.json
