[tool.poetry]
name = "pingou"
version = "0.1.1"
description = "An NGINX logs parser"
authors = ["Julien Brayere <julien.brayere@obitrain.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.25.0"
rich = "^11.1.0"
PyYAML = "^6.0"
piou = "^0.9.4"
geoip2 = "^4.5.0"
ujson = "^5.1.0"
bugsnag = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
psycopg2 = "^2.9.3"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=pingou -s -q -x"
testpaths = [
    "tests"
]
python_files = "*.py"


[tool.pyright]
include = ["pingou", "run.py"]
exclude = []

pythonVersion = "3.10"
pythonPlatform = "Linux"
